--- a/manifest.json
+++ b/manifest.json
@@ -15,8 +15,8 @@
   "generated": "true",
   "icons": [
     {
-      "src": "https://jack5079.tk/bruh-beagle-2/favicon.ico",
-      "sizes": "16x16"
+      "src": "https://jack5079.tk/bruh-beagle-2/beg.jpg",
+      "sizes": "512x512"
     }
   ]
 }
