--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
   "generated": "true",
   "icons": [
     {
-      "src": "https://jack5079.tk/bruh-beagle-2/icon.jpg",
+      "src": "https://jack5079.tk/bruh-beagle-2/icon.png",
       "sizes": "512x512"
     }
   ]
