Rename to Bark Beagle

--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
   "dir": "ltr",
   "lang": "English",
-  "name": "Bruh Beagle 2",
+  "name": "Bark Beagle",
   "scope": "./",
   "display": "standalone",
   "start_url": ".",
-  "short_name": "Bruh Beagle 2",
+  "short_name": "Bark Beagle",
   "theme_color": "#77533A",
-  "description": "Bruh Beagle 2 is here, with faster loading times and more!",
+  "description": "Bark Beagle - the weirdest idle clicker ever made",
   "orientation": "any",
   "background_color": "#000000",
   "related_applications": [],
