--- a/package.json
+++ b/package.json
@@ -4,5 +4,11 @@
   "description": "Bark Beagle - the weirdest idle clicker ever made",
   "main": "index.html",
   "repository": "https://github.com/Jack5079/bark-beagle.git",
-  "author": "Jack <29169102+Jack5079@users.noreply.github.com>"
+  "author": "Jack <29169102+Jack5079@users.noreply.github.com>",
+  "devDependencies": {
+    "lite-server": "^2.5.4"
+  },
+  "scripts": {
+    "dev": "lite-server"
+  }
 }
