--- a/package.json
+++ b/package.json
@@ -4,11 +4,5 @@
   "description": "Bark Beagle - the weirdest idle clicker ever made",
   "main": "index.html",
   "repository": "https://github.com/Jack5079/bark-beagle.git",
-  "author": "Jack <29169102+Jack5079@users.noreply.github.com>",
-  "scripts": {
-    "dev": "serve"
-  },
-  "devDependencies": {
-    "serve": "^11.3.0"
-  }
+  "author": "Jack <29169102+Jack5079@users.noreply.github.com>"
 }
