--- a/.eslintrc
+++ b/.eslintrc
@@ -66,7 +66,10 @@
     "operator-linebreak": "warn",
     "quotes": [
       "warn",
-      "single"
+      "single",
+      {
+        "avoidEscape": true
+      }
     ],
     "require-await": "error",
     "semi": [
