--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "module": "esnext",
-    "target": "ESNext"
+    "module": "es2020",
+    "target": "es2020"
   },
   "exclude": [
     "node_modules",
